[fixes] add button on mobile

--- a/src/app/registry-boards/add-registry-modal/add-registry-modal.component.scss
+++ b/src/app/registry-boards/add-registry-modal/add-registry-modal.component.scss
@@ -6,6 +6,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    background-color: #673ab7;
+    color: white;
+    box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
+    border-radius: 50%;
 }
 #large-screen-section {
     @media screen and (max-width: 599px) {
